--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Criando os campos e botões da página --> 
     <div class="container">
         <input  class="input-task" placeholder="O que tenho que fazer...">
         <button class="button-add-task">Adicionar</button>
@@ -17,17 +18,9 @@
         <ul class="list-tasks">
             <li class="task">
                 <img src="./img/checked.png" alt="check-na-tarefa">
-                <p class="par">Primeiro item
-                <img src="./img/trash.png" alt="tarefa-para-lixo">
-                </p>
-            </li>
-
-            <li class="task">
-                <img src="./img/checked.png" alt="check-na-tarefa">
-                <p class="par">Segundo item
-                <img src="./img/trash.png" alt="tarefa-para-lixo">
-                </p>
-            </li>
+                <p>${tarefa}</p>
+                <img class="./img/trash.png" alt="tarefa-para-lixo" onclick="deletarItem()">
+        </li> 
         </ul>
     </div>
 </body>
