Adicionando as funcionalidades a tela de menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <!--Criando o título e links de referencia com CSS-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,11 +17,7 @@
         <button class="button-add-task">Adicionar</button>
 
         <ul class="list-tasks">
-            <li class="task">
-                <img src="./img/checked.png" alt="check-na-tarefa">
-                <p>${tarefa}</p>
-                <img class="./img/trash.png" alt="tarefa-para-lixo" onclick="deletarItem()">
-        </li> 
+            
         </ul>
     </div>
 </body>
